Fix bug when .no-wrap affects text inside tooltip (closes #57)

--- a/src/scss/components/_tooltip.scss
+++ b/src/scss/components/_tooltip.scss
@@ -4,6 +4,7 @@
     overflow: visible; // IE is crazy
     &::before, &::after {
         display: block;
+        white-space: normal;
         position: absolute;
         opacity: 0;
         transition-property: opacity;
